updates to MMU-config

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -5,36 +5,39 @@ serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
 [respond]
 default_type: command
 
-[manual_stepper x]
-step_pin: mmboard:
-dir_pin: mmboard:
-enable_pin: !mmboard:
+# MKS Gen l V1
+
+[stepper_x]
+step_pin: mmboard:PF0
+dir_pin: !mmboard:PF1
+enable_pin: !mmboard:PD7
 microsteps: 16
-rotation_distance: 128
-velocity: 100
-accel: 80
+rotation_distance: 40   ##rotation_distance = ((360°/1.8°) * microsteps)
+homing_speed: 30
 
-[filament_switch_sensor ir_sensor]
-pause_on_runout: False
-switch_pin: !P1.28   
+[stepper_y]
+step_pin: mmboard:PF6
+dir_pin: !mmboard:PF7
+enable_pin: !mmboard:PF2
+microsteps: 16
+rotation_distance: 40
+homing_speed: 30
 
-[gcode_macro VAR_MMU2S]
-variable_timeout_pause: 36000 
-variable_disable_heater: 600
-variable_bowden_load_length1: 770
-variable_bowden_load_length2: 790
-variable_bowden_unload_length: 830
-variable_pinda_load_length: 120
-variable_pinda_unload_length: 15
-variable_colorselector = [71,57,43,29,16]
-variable_idler = [5,20,35,50,65]
-variable_idler_home_position: 85
-variable_pause_x: 0
-variable_pause_y: 300
-variable_pause_z: 10
-variable_min_temp_extruder: 180
-variable_extruder_eject_temp: 200
-variable_enable_5in1: 0
+[stepper_z]
+step_pin: mmboard:PL3
+dir_pin: mmboard:PL1
+enable_pin: !mmboard:PK0
+microsteps: 16
+rotation_distance: 8
+
+
+[extruder]
+step_pin: mmboard:PA4
+dir_pin: !mmboard:PA6
+enable_pin: !mmboard:PA2
+microsteps: 16
+rotation_distance: 33.500
+
 
 [gcode_macro xsteppertest]
 ; Set the motor to a known position
