poc motor control

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -2,18 +2,21 @@
 [mcu mmboard]
 serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0 
 
+# [printer]
+# kinematics:none
+
 [respond]
 default_type: command
 
 # MKS Gen l V1
 
-[stepper_x]
+[manual_stepper my_custom_stepper]
 step_pin: mmboard:PF0
 dir_pin: !mmboard:PF1
 enable_pin: !mmboard:PD7
 microsteps: 16
-rotation_distance: 40   ##rotation_distance = ((360°/1.8°) * microsteps)
-homing_speed: 30
+rotation_distance: 40   # rotation_distance = ((360°/1.8°) * microsteps)
+
 
 [stepper_y]
 step_pin: mmboard:PF6
@@ -30,7 +33,6 @@ enable_pin: !mmboard:PK0
 microsteps: 16
 rotation_distance: 8
 
-
 [extruder]
 step_pin: mmboard:PA4
 dir_pin: !mmboard:PA6
@@ -38,64 +40,16 @@ enable_pin: !mmboard:PA2
 microsteps: 16
 rotation_distance: 33.500
 
-
-[gcode_macro xsteppertest]
-; Set the motor to a known position
-G92 X0
-
-; Move the motor 100mm at a speed of 3000 mm/min
-G1 X100 F3000
-
-; Move the motor back to the original position
-G1 X0 F3000
-
-; Repeat the movement to ensure motor functionality
-G1 X100 F3000
-G1 X0 F3000
-
-; End of test
-M84 ; Disable all steppers
-
-[gcode_macro UNLOAD_FILAMENT_FROM_EXTRUDER]
+[gcode_macro drive_custom_stepper]
+description: Drive the custom stepper motor 100 mm forward and back
 gcode:
-    {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
-    {% if printer["gcode_macro SELECT_TOOL"].tool_selected|int != -1 %}
-        M118 Unloading filament from extruder to PINDA ...
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-        {% if printer["gcode_macro VAR_MMU2S"].enable_5in1 == 0 %}
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].bowden_unload_length} SPEED=120 ACCEL=80 STOP_ON_ENDSTOP=-2
-        IS_FILAMENT_STUCK_IN_PINDA
-        {% else %}
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].bowden_unload_length} SPEED=120 ACCEL=80
-        {% endif %}
-    {% else %}
-    {% endif %}
-    {% endif %}
-
-[gcode_macro LOAD_FILAMENT_IN_EXTRUDER]
-gcode:
-    {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
-    {% if printer.extruder.temperature > printer["gcode_macro VAR_MMU2S"].min_temp_extruder %}
-        M118 Loading Filament...
-        G91
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=20 SPEED=30
-        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-        G1 E10 F600
-        UNSELECT_TOOL
-        G1 E10 F1800
-        G1 E22 F1393
-        G1 E10 F614
-        G92 E0
-        G90
-        RETRY_LOAD_FILAMENT_IN_EXTRUDER
-        RETRY_LOAD_FILAMENT_IN_EXTRUDER
-        RETRY_LOAD_FILAMENT_IN_EXTRUDER
-        IS_FILAMENT_IN_EXTRUDER
-        M118 Load Complete
-    {% else %}
-    M118 Extruder too cold
-    PAUSE_MMU
-    {% endif %}
-    {% endif %}
-
+    # Enable the custom stepper motor
+    # SET_PIN PIN=mmboard:PD7 VALUE=0
+    # Set the current position as zero
+    MANUAL_STEPPER STEPPER=my_custom_stepper SET_POSITION=0
+    # Move the custom stepper motor 100 mm forward at a speed of 3000 mm/min
+    MANUAL_STEPPER STEPPER=my_custom_stepper MOVE=100 SPEED=50
+    # Move the custom stepper motor back to the original position
+    MANUAL_STEPPER STEPPER=my_custom_stepper MOVE=-100 SPEED=50
+    # Disable the custom stepper motor
+    # SET_PIN PIN=mmboard:PD7 VALUE=1
