--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -44,12 +44,12 @@ rotation_distance: 33.500
 description: Drive the custom stepper motor 100 mm forward and back
 gcode:
     # Enable the custom stepper motor
-    # SET_PIN PIN=mmboard:PD7 VALUE=0
+    SET_PIN PIN=PD7 VALUE=0
     # Set the current position as zero
     MANUAL_STEPPER STEPPER=my_custom_stepper SET_POSITION=0
     # Move the custom stepper motor 100 mm forward at a speed of 3000 mm/min
-    MANUAL_STEPPER STEPPER=my_custom_stepper MOVE=100 SPEED=50
+    MANUAL_STEPPER STEPPER=my_custom_stepper MOVE=100 SPEED=1
     # Move the custom stepper motor back to the original position
-    MANUAL_STEPPER STEPPER=my_custom_stepper MOVE=-100 SPEED=50
+    MANUAL_STEPPER STEPPER=my_custom_stepper MOVE=-100 SPEED=1
     # Disable the custom stepper motor
-    # SET_PIN PIN=mmboard:PD7 VALUE=1
+    SET_PIN PIN=PD7 VALUE=1
