--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -15,8 +15,17 @@ step_pin: mmboard:PF0
 dir_pin: !mmboard:PF1
 enable_pin: !mmboard:PD7
 microsteps: 16
-rotation_distance: 40   # rotation_distance = ((360°/1.8°) * microsteps)
+rotation_distance: 40   # Update this based on your leadscrew or belt setup
 
+[tmc2208 my_custom_stepper]
+uart_pin: PK1
+interpolate: True
+run_current: 0.8
+# hold_current: 0.5  # Uncomment and set if needed
+sense_resistor: 0.110
+stealthchop_threshold: 999999
+diag_pin: ^PE5  # Set to MCU pin connected to TMC DIAG pin
+driver_SGTHRS: 60  # 255 is most sensitive value, 0 is least sensitive
 
 [stepper_y]
 step_pin: mmboard:PF6
