commitign before merge

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -15,7 +15,8 @@ step_pin: mmboard:PF0
 dir_pin: !mmboard:PF1
 enable_pin: !mmboard:PD7
 microsteps: 16
-rotation_distance: 40   # rotation_distance = ((360°/1.8°) * microsteps)
+full_steps_per_rotation: 400
+rotation_distance: 40
 
 
 [stepper_y]
@@ -39,6 +40,9 @@ dir_pin: !mmboard:PA6
 enable_pin: !mmboard:PA2
 microsteps: 16
 rotation_distance: 33.500
+
+
+
 
 [gcode_macro drive_custom_stepper]
 description: Drive the custom stepper motor 100 mm forward and back
