adding more motors without tmc

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -58,6 +58,22 @@ stealthchop_threshold: 999999
 # diag_pin: ^ mmboard:PJ1  # Set to MCU pin connected to TMC DIAG pin
 # driver_SGTHRS: 60  # 255 is most sensitive value, 0 is least sensitive
 
+[manual_stepper filament3]
+step_pin: mmboard:PL3
+dir_pin: !mmboard:PL1
+enable_pin: !mmboard:PK0
+microsteps: 16
+rotation_distance: 40
+full_steps_per_rotation: 400
+
+[manual_stepper filament4]
+step_pin: mmboard:PA4
+dir_pin: !mmboard:PA6
+enable_pin: !mmboard:PA2
+microsteps: 16
+rotation_distance: 40
+full_steps_per_rotation: 400
+
 
 ########################################
 # MACROs
@@ -87,3 +103,13 @@ gcode:
 gcode:
     MANUAL_STEPPER STEPPER=filament2 SET_POSITION=0
     MANUAL_STEPPER STEPPER=filament2 MOVE=-10 SPEED=30
+
+[gcode_macro load_filament3]
+gcode:
+    MANUAL_STEPPER STEPPER=filament3 SET_POSITION=0
+    MANUAL_STEPPER STEPPER=filament3 MOVE=10 SPEED=30
+
+[gcode_macro load_filament4]
+gcode:
+    MANUAL_STEPPER STEPPER=filament4 SET_POSITION=0
+    MANUAL_STEPPER STEPPER=filament4 MOVE=10 SPEED=30
