--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -6,9 +6,9 @@ default_type: command
 
 # MKS Gen L V1
 [manual_stepper filament1]
-step_pin: mmboard:PB0
-dir_pin: !mmboard:PB1
-enable_pin: !mmboard:PB2
+step_pin: mmboard:PF0
+dir_pin: !mmboard:PF1
+enable_pin: !mmboard:PD7
 microsteps: 16
 rotation_distance: 40
 full_steps_per_rotation: 400
@@ -32,34 +32,24 @@ sense_resistor: 0.110
 # Unable to read tmc uart 'filament1' register IFCNT
 
 [manual_stepper filament2]
-step_pin: mmboard:PC0
-dir_pin: !mmboard:PC1
-enable_pin: !mmboard:PC2
+step_pin: mmboard:PF6
+dir_pin: !mmboard:PF7
+enable_pin: !mmboard:PF7
 microsteps: 16
 rotation_distance: 40
 full_steps_per_rotation: 400
-# nozzle_diameter: 0.6  ; Nozzle diameter in mm (assuming 0.6mm)
-# filament_diameter: 1.75  ; Filament diameter in mm (standard 1.75mm)
-# min_temp: 0
-# max_temp: 330
-# heater_pin: PA7
-# sensor_type: NTC 100K MGB18-104F39050L32
-# sensor_pin: PA1
-# max_power: 255  ; Maximum power for the heater (adjust as needed)
-# control: pid  ; Use PID control for temperature regulation
 
-[tmc2208 manual_stepper filament2]
+
+[tmc2208 manual_stepper filament2]#does nothing
 uart_pin: mmboard:PK2
 tx_pin: mmboard:PF5
 interpolate: True
 run_current: 0.8
-hold_current: 0.5  # Uncomment and set if needed
 sense_resistor: 0.110
-stealthchop_threshold: 999999
-# diag_pin: ^ mmboard:PJ1  # Set to MCU pin connected to TMC DIAG pin
-# driver_SGTHRS: 60  # 255 is most sensitive value, 0 is least sensitive
 
-[manual_stepper filament3]
+
+
+[manual_stepper filament3]#does nothing
 step_pin: mmboard:PL3
 dir_pin: !mmboard:PL1
 enable_pin: !mmboard:PK0
@@ -67,7 +57,7 @@ microsteps: 16
 rotation_distance: 40
 full_steps_per_rotation: 400
 
-[manual_stepper filament4]
+[manual_stepper filament4] #is currently working
 step_pin: mmboard:PA4
 dir_pin: !mmboard:PA6
 enable_pin: !mmboard:PA2
