small ajustments to the numbers

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -52,7 +52,7 @@ gcode:
 [gcode_macro unload_filament1]
 gcode:
     MANUAL_STEPPER STEPPER=filament1 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament1 MOVE=-210 SPEED=1000 ACCEL=500 SYNC=0
+    MANUAL_STEPPER STEPPER=filament1 MOVE=-210 SPEED=100 ACCEL=500 SYNC=0
 
 
 [gcode_macro load_filament2]
@@ -69,7 +69,7 @@ gcode:
 [gcode_macro load_filament3]
 gcode:
     MANUAL_STEPPER STEPPER=filament3 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament3 MOVE=250 SPEED=30 SYNC=0
+    MANUAL_STEPPER STEPPER=filament3 MOVE=500 SPEED=300 SYNC=0
 
 [gcode_macro unload_filament3]
 gcode:
@@ -85,3 +85,12 @@ gcode:
 gcode:
     MANUAL_STEPPER STEPPER=filament4 SET_POSITION=0
     MANUAL_STEPPER STEPPER=filament4 MOVE=-250 SPEED=30 SYNC=0    
+
+# need to create a macro for activating each filament, when active it must feed filament to the direct drive extruder, 
+# so either no hold or they just have to spin together
+
+#find out why motor 1 and 2 act different to 3 and 4
+
+#test motor 5
+
+# start thinking about how I want the filament sensors to act
