gpt did some crap

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -37,6 +37,14 @@ microsteps: 16
 rotation_distance: 40
 full_steps_per_rotation: 400
 
+[manual_stepper filament5] # Initial setup for testing motor 5
+step_pin: mmboard:PC1
+dir_pin: !mmboard:PC3
+enable_pin: !mmboard:PC7
+microsteps: 16
+rotation_distance: 40
+full_steps_per_rotation: 400
+
 ########################################
 # MACROs
 ########################################
@@ -47,19 +55,15 @@ gcode:
     MANUAL_STEPPER STEPPER=filament1 SET_POSITION=0
     MANUAL_STEPPER STEPPER=filament1 MOVE=100 SPEED=1000 ACCEL=500 SYNC=0
 
-
-
 [gcode_macro unload_filament1]
 gcode:
     MANUAL_STEPPER STEPPER=filament1 SET_POSITION=0
     MANUAL_STEPPER STEPPER=filament1 MOVE=-210 SPEED=100 ACCEL=500 SYNC=0
 
-
 [gcode_macro load_filament2]
 gcode:
     MANUAL_STEPPER STEPPER=filament2 SET_POSITION=0
     MANUAL_STEPPER STEPPER=filament2 MOVE=1000 SPEED=30 SYNC=0
-
 
 [gcode_macro unload_filament2]
 gcode:
@@ -84,8 +88,42 @@ gcode:
 [gcode_macro unload_filament4]
 gcode:
     MANUAL_STEPPER STEPPER=filament4 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament4 MOVE=-250 SPEED=30 SYNC=0    
+    MANUAL_STEPPER STEPPER=filament4 MOVE=-250 SPEED=30 SYNC=0
 
+[gcode_macro load_filament5] # Testing motor 5
+gcode:
+    MANUAL_STEPPER STEPPER=filament5 SET_POSITION=0
+    MANUAL_STEPPER STEPPER=filament5 MOVE=400 SPEED=30 SYNC=0
+
+[gcode_macro unload_filament5]
+gcode:
+    MANUAL_STEPPER STEPPER=filament5 SET_POSITION=0
+    MANUAL_STEPPER STEPPER=filament5 MOVE=-250 SPEED=30 SYNC=0
+
+[gcode_macro activate_filament1]
+gcode:
+    # Add commands to activate filament1 and deactivate others
+    MANUAL_STEPPER STEPPER=filament1 MOVE=100 SPEED=30
+
+[gcode_macro activate_filament2]
+gcode:
+    # Add commands to activate filament2 and deactivate others
+    MANUAL_STEPPER STEPPER=filament2 MOVE=100 SPEED=30
+
+[gcode_macro activate_filament3]
+gcode:
+    # Add commands to activate filament3 and deactivate others
+    MANUAL_STEPPER STEPPER=filament3 MOVE=100 SPEED=30
+
+[gcode_macro activate_filament4]
+gcode:
+    # Add commands to activate filament4 and deactivate others
+    MANUAL_STEPPER STEPPER=filament4 MOVE=100 SPEED=30
+
+[gcode_macro activate_filament5] # Test activation of filament5
+gcode:
+    # Add commands to activate filament5 and deactivate others
+    MANUAL_STEPPER STEPPER=filament5 MOVE=100 SPEED=30
 # need to create a macro for activating each filament, when active it must feed filament to the direct drive extruder, 
 # so either no hold or they just have to spin together
 
