--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -114,16 +114,40 @@ gcode:
 gcode:
     # Add commands to activate filament3 and deactivate others
     MANUAL_STEPPER STEPPER=filament3 MOVE=100 SPEED=30
+    [extruder_stepper]
+    gecode
 
 [gcode_macro activate_filament4]
-gcode:
-    # Add commands to activate filament4 and deactivate others
-    MANUAL_STEPPER STEPPER=filament4 MOVE=100 SPEED=30
+    gcode:
+        # Add commands to activate filament4 and deactivate others
+        MANUAL_STEPPER STEPPER=filament4 MOVE=100 SPEED=30
 
 [gcode_macro activate_filament5] # Test activation of filament5
-gcode:
-    # Add commands to activate filament5 and deactivate others
-    MANUAL_STEPPER STEPPER=filament5 MOVE=100 SPEED=30
+    gcode:
+        # Add commands to activate filament5 and deactivate others
+        MANUAL_STEPPER STEPPER=filament5 MOVE=100 SPEED=30
+
+[gcode_macro sync_steppers]
+    description: Synchronize the movements of filament1 and filament2 steppers
+    gcode:
+        MANUAL_STEPPER STEPPER=filament1 SET_POSITION=0
+        MANUAL_STEPPER STEPPER=filament2 SET_POSITION=0
+        MANUAL_STEPPER STEPPER=filament3 SET_POSITION=0
+        MANUAL_STEPPER STEPPER=filament4 SET_POSITION=0
+        MANUAL_STEPPER STEPPER=filament1 MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel} SYNC=1
+        MANUAL_STEPPER STEPPER=filament2 MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel} SYNC=1
+        MANUAL_STEPPER STEPPER=filament3 MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel} SYNC=1
+        MANUAL_STEPPER STEPPER=filament4 MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel} SYNC=1
+
+[gcode_macro load_filament_sync]
+    description: Load filament using synchronized steppers
+    gcode:
+        SYNC_STEPPERS distance=100 speed=1000 accel=500
+
+[gcode_macro unload_filament_sync]
+    description: Unload filament using synchronized steppers
+    gcode:
+        SYNC_STEPPERS distance=-100 speed=1000 accel=500
 # need to create a macro for activating each filament, when active it must feed filament to the direct drive extruder, 
 # so either no hold or they just have to spin together
 
