all files updated

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -45,109 +45,116 @@ microsteps: 16
 rotation_distance: 40
 full_steps_per_rotation: 400
 
+# Virtual stepper motor to handle filament synchronization
+[virtual_stepper synchronized_filament]
+
 ########################################
 # MACROs
 ########################################
 
-[gcode_macro load_filament1]
-description: Drive the extruder motor 100 mm forward and back
+# Macro to deselect all filament motors
+[gcode_macro DESELECT_ALL_FILAMENTS]
 gcode:
-    MANUAL_STEPPER STEPPER=filament1 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament1 MOVE=100 SPEED=1000 ACCEL=500 SYNC=0
+    MANUAL_STEPPER STEPPER=filament1 DISABLE
+    MANUAL_STEPPER STEPPER=filament2 DISABLE
+    MANUAL_STEPPER STEPPER=filament3 DISABLE
+    MANUAL_STEPPER STEPPER=filament4 DISABLE
 
-[gcode_macro unload_filament1]
+# Macro to select the filament motor to be synchronized
+[gcode_macro SELECT_FILAMENT1]
 gcode:
-    MANUAL_STEPPER STEPPER=filament1 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament1 MOVE=-210 SPEED=100 ACCEL=500 SYNC=0
+    DESELECT_ALL_FILAMENTS
+    SET_GCODE_VARIABLE MACRO=SYNC_FILAMENT VARIABLE=selected_filament VALUE=filament1
+    MANUAL_STEPPER STEPPER=filament1 ENABLE
 
-[gcode_macro load_filament2]
+[gcode_macro SELECT_FILAMENT2]
 gcode:
-    MANUAL_STEPPER STEPPER=filament2 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament2 MOVE=1000 SPEED=30 SYNC=0
+    DESELECT_ALL_FILAMENTS
+    SET_GCODE_VARIABLE MACRO=SYNC_FILAMENT VARIABLE=selected_filament VALUE=filament2
+    MANUAL_STEPPER STEPPER=filament2 ENABLE
 
-[gcode_macro unload_filament2]
+[gcode_macro SELECT_FILAMENT3]
 gcode:
-    MANUAL_STEPPER STEPPER=filament2 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament2 MOVE=-1000 SPEED=30 SYNC=0
+    DESELECT_ALL_FILAMENTS
+    SET_GCODE_VARIABLE MACRO=SYNC_FILAMENT VARIABLE=selected_filament VALUE=filament3
+    MANUAL_STEPPER STEPPER=filament3 ENABLE
 
-[gcode_macro load_filament3]
+[gcode_macro SELECT_FILAMENT4]
 gcode:
-    MANUAL_STEPPER STEPPER=filament3 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament3 MOVE=500 SPEED=300 SYNC=0
+    DESELECT_ALL_FILAMENTS
+    SET_GCODE_VARIABLE MACRO=SYNC_FILAMENT VARIABLE=selected_filament VALUE=filament4
+    MANUAL_STEPPER STEPPER=filament4 ENABLE
 
-[gcode_macro unload_filament3]
+# Macro to synchronize the selected filament motor with the extruder
+[gcode_macro SYNC_FILAMENT]
+variable_selected_filament: filament1
 gcode:
-    MANUAL_STEPPER STEPPER=filament3 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament3 MOVE=-250 SPEED=30 SYNC=0  
+    MANUAL_STEPPER STEPPER={selected_filament} SET_POSITION=0
+    MANUAL_STEPPER STEPPER=extruder SET_POSITION=0
+    MANUAL_STEPPER STEPPER={selected_filament} MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel}
+    MANUAL_STEPPER STEPPER=extruder MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel}
 
-[gcode_macro load_filament4]
+# Macro to pause synchronization and change the filament motor
+[gcode_macro PAUSE_AND_SWITCH_FILAMENT]
 gcode:
-    MANUAL_STEPPER STEPPER=filament4 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament4 MOVE=400 SPEED=30 SYNC=0
+    # Pause synchronization
+    PAUSE
+    # Change filament motor
+    {params.new_filament_macro}
+    # Resume synchronization
+    RESUME
 
-[gcode_macro unload_filament4]
+########################################
+# Example Usage
+########################################
+
+[gcode_macro LOAD_FILAMENT1]
+description: Load filament 1 and synchronize with extruder
 gcode:
-    MANUAL_STEPPER STEPPER=filament4 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament4 MOVE=-250 SPEED=30 SYNC=0
+    SELECT_FILAMENT1
+    SYNC_FILAMENT distance=100 speed=1000 accel=500
 
-[gcode_macro load_filament5] # Testing motor 5
+[gcode_macro LOAD_FILAMENT2]
+description: Load filament 2 and synchronize with extruder
 gcode:
-    MANUAL_STEPPER STEPPER=filament5 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament5 MOVE=400 SPEED=30 SYNC=0
+    SELECT_FILAMENT2
+    SYNC_FILAMENT distance=100 speed=1000 accel=500
 
-[gcode_macro unload_filament5]
+[gcode_macro LOAD_FILAMENT3]
+description: Load filament 3 and synchronize with extruder
 gcode:
-    MANUAL_STEPPER STEPPER=filament5 SET_POSITION=0
-    MANUAL_STEPPER STEPPER=filament5 MOVE=-250 SPEED=30 SYNC=0
+    SELECT_FILAMENT3
+    SYNC_FILAMENT distance=100 speed=1000 accel=500
 
-[gcode_macro activate_filament1]
+[gcode_macro LOAD_FILAMENT4]
+description: Load filament 4 and synchronize with extruder
 gcode:
-    # Add commands to activate filament1 and deactivate others
-    MANUAL_STEPPER STEPPER=filament1 MOVE=100 SPEED=30
+    SELECT_FILAMENT4
+    SYNC_FILAMENT distance=100 speed=1000 accel=500
 
-[gcode_macro activate_filament2]
+[gcode_macro UNLOAD_FILAMENT1]
+description: Unload filament 1 and synchronize with extruder
 gcode:
-    # Add commands to activate filament2 and deactivate others
-    MANUAL_STEPPER STEPPER=filament2 MOVE=100 SPEED=30
+    SELECT_FILAMENT1
+    SYNC_FILAMENT distance=-100 speed=1000 accel=500
 
-[gcode_macro activate_filament3]
+[gcode_macro UNLOAD_FILAMENT2]
+description: Unload filament 2 and synchronize with extruder
 gcode:
-    # Add commands to activate filament3 and deactivate others
-    MANUAL_STEPPER STEPPER=filament3 MOVE=100 SPEED=30
-    [extruder_stepper]
-    gecode
+    SELECT_FILAMENT2
+    SYNC_FILAMENT distance=-100 speed=1000 accel=500
 
-[gcode_macro activate_filament4]
-    gcode:
-        # Add commands to activate filament4 and deactivate others
-        MANUAL_STEPPER STEPPER=filament4 MOVE=100 SPEED=30
+[gcode_macro UNLOAD_FILAMENT3]
+description: Unload filament 3 and synchronize with extruder
+gcode:
+    SELECT_FILAMENT3
+    SYNC_FILAMENT distance=-100 speed=1000 accel=500
 
-[gcode_macro activate_filament5] # Test activation of filament5
-    gcode:
-        # Add commands to activate filament5 and deactivate others
-        MANUAL_STEPPER STEPPER=filament5 MOVE=100 SPEED=30
-
-[gcode_macro sync_steppers]
-    description: Synchronize the movements of filament1 and filament2 steppers
-    gcode:
-        MANUAL_STEPPER STEPPER=filament1 SET_POSITION=0
-        MANUAL_STEPPER STEPPER=filament2 SET_POSITION=0
-        MANUAL_STEPPER STEPPER=filament3 SET_POSITION=0
-        MANUAL_STEPPER STEPPER=filament4 SET_POSITION=0
-        MANUAL_STEPPER STEPPER=filament1 MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel} SYNC=1
-        MANUAL_STEPPER STEPPER=filament2 MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel} SYNC=1
-        MANUAL_STEPPER STEPPER=filament3 MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel} SYNC=1
-        MANUAL_STEPPER STEPPER=filament4 MOVE={params.distance} SPEED={params.speed} ACCEL={params.accel} SYNC=1
-
-[gcode_macro load_filament_sync]
-    description: Load filament using synchronized steppers
-    gcode:
-        SYNC_STEPPERS distance=100 speed=1000 accel=500
-
-[gcode_macro unload_filament_sync]
-    description: Unload filament using synchronized steppers
-    gcode:
-        SYNC_STEPPERS distance=-100 speed=1000 accel=500
+[gcode_macro UNLOAD_FILAMENT4]
+description: Unload filament 4 and synchronize with extruder
+gcode:
+    SELECT_FILAMENT4
+    SYNC_FILAMENT distance=-100 speed=1000 accel=500
 # need to create a macro for activating each filament, when active it must feed filament to the direct drive extruder, 
 # so either no hold or they just have to spin together
 
