--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -120,6 +120,11 @@ gcode:
 gcode:
     SELECT_FILAMENT FILAMENT=5
 
+[gcode_macro syncMotor1]
+gcode:
+    [extruder_stepper motor1]
+    extruder: extruder
+
 #find out why motor 1 and 2 act different to 3 and 4
 
 #test motor 5
