motor 1 off macro added

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -123,11 +123,16 @@ gcode:
 gcode:
     SELECT_FILAMENT FILAMENT=5
 
-[gcode_macro syncMotor1]
+[gcode_macro SYNC_motor1]
 gcode:
     [extruder_stepper motor1]
     extruder: extruder
 
+[gcode_macro OFF_motor1]
+gcode:
+    MANUAL_STEPPER STEPPER=motor1 ENABLE=0
+
+    
 #find out why motor 1 and 2 act different to 3 and 4
 
 #test motor 5
