--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -132,7 +132,10 @@ gcode:
 gcode:
     MANUAL_STEPPER STEPPER=motor1 ENABLE=0
 
-    
+[gcode_macro OFF_motor3]
+gcode:
+    MANUAL_STEPPER STEPPER=motor3 ENABLE=0
+
 #find out why motor 1 and 2 act different to 3 and 4
 
 #test motor 5
