changing to extruders

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -27,7 +27,7 @@ full_steps_per_rotation: 400
 # run_current = 0.8
 
 
-[manual_stepper motor2]
+[extruder_stepper motor2]
 step_pin: mmboard:PF6
 dir_pin: !mmboard:PF7
 enable_pin: !mmboard:PF2
@@ -38,7 +38,7 @@ full_steps_per_rotation: 400
 # uart_pin= mmboard:PK2
 # run_current = 0.8
 
-[manual_stepper motor3]
+[extruder_stepper motor3]
 step_pin: mmboard:PL3
 dir_pin: !mmboard:PL1
 enable_pin: !mmboard:PK0
@@ -49,7 +49,7 @@ full_steps_per_rotation: 400
 # uart_pin= mmboard:PK3
 # run_current = 0.8
 
-[manual_stepper motor4] #is currently working
+[extruder_stepper motor4] #is currently working
 step_pin: mmboard:PA4
 dir_pin: !mmboard:PA6
 enable_pin: !mmboard:PA2
@@ -60,7 +60,7 @@ full_steps_per_rotation: 400
 # uart_pin= mmboard:PK4
 # run_current = 0.8
 
-[manual_stepper motor5] # Initial setup for testing motor 5
+[extruder_stepper motor5] # Initial setup for testing motor 5
 step_pin: mmboard:PC1
 dir_pin: !mmboard:PC3
 enable_pin: !mmboard:PC7
@@ -70,10 +70,6 @@ full_steps_per_rotation: 400
 # [tmc2208 manual_stepper motor5]
 # uart_pin= mmboard:PB6
 # run_current = 0.8
-
-
-[save_variables]
-filename:MMU-variables.
 
 # SAVE_VARIABLE VARIABLE=temperature_target VALUE={TARGET_TEMP}
 
@@ -89,15 +85,20 @@ gcode:
     G91 
     MANUAL_STEPPER STEPPER={params.MOTOR} MOVE={params.MOVE} SYNC={params.ASYCN|default(1)}
     G90
+
+
 [gcode_macro stepper_pause]
 gcode:
     MANUAL_STEPPER STEPPER={params.MOTOR} ENABLE=0
+
 [gcode_macro stepper_active]
 gcode:
     MANUAL_STEPPER STEPPER={params.MOTOR} ENABLE=1
+
 [gcode_macro sync_motor]
 gcode:
     SYNC_EXTRUDER_MOTION EXTRUDER=motor1 MOTION_QUEUE=extruder
+
 
 [gcode_macro Motor1]
 gcode:
@@ -108,6 +109,10 @@ gcode:
 [gcode_macro Motor3]
 gcode:
     _MotorMenu MOTOR=motor3
+[gcode_macro Motor4]
+gcode:
+    _MotorMenu MOTOR=motor4
+
 
 [gcode_macro _MotorMenu]
 gcode:
