changing everything to extruder, and also switching to force move instead of manuel move

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -83,7 +83,7 @@ gcode:
 [gcode_macro drive]
 gcode:
     G91 
-    MANUAL_STEPPER STEPPER={params.MOTOR} MOVE={params.MOVE} SYNC={params.ASYCN|default(1)}
+    FORCE_MOVE STEPPER="extruder_stepper {params.MOTOR}" DISTANCE={params.MOVE} VELOCITY=50
     G90
 
 
@@ -134,7 +134,7 @@ gcode:
 
 [gcode_macro _DriveMenu]
 gcode:
-    RESPOND TYPE=command MSG="action:prompt_begin MacroPrompt"
+    RESPOND TYPE=command MSG="action:prompt_begin Motor Control"
     RESPOND TYPE=command MSG="action:prompt_text Select what you want {params.MOTOR} to do"
     RESPOND TYPE=command MSG="action:prompt_button_group_start"
     RESPOND TYPE=command MSG="action:prompt_button load 100|drive MOTOR={params.MOTOR} MOVE=100|warning"
@@ -148,20 +148,11 @@ gcode:
     RESPOND TYPE=command MSG="action:prompt_button_group_end"
     RESPOND TYPE=command MSG="action:prompt_footer_button  Back|_MotorMenu MOTOR={params.MOTOR}|default"
     RESPOND TYPE=command MSG="action:prompt_show"
-[gcode_macro SHOW_PROMT_BUTTON_GROUPS]
+[gcode_macro mainMenu]
 gcode:
-    RESPOND TYPE=command MSG="action:prompt_begin MacroPrompt"
-    RESPOND TYPE=command MSG="action:prompt_text These are all button colors"
-    RESPOND TYPE=command MSG="action:"
+    RESPOND TYPE=command MSG="action:prompt_begin MainMenu"
     RESPOND TYPE=command MSG="action:prompt_button_group_start"
-    RESPOND TYPE=command MSG="action:prompt_button primary|TEST|primary"
-    RESPOND TYPE=command MSG="action:prompt_button secondary|TEST|secondary"
-    RESPOND TYPE=command MSG="action:prompt_button_group_end"
-    RESPOND TYPE=command MSG="action:prompt_button_group_start"
-    RESPOND TYPE=command MSG="action:prompt_button info|TEST|info"
-    RESPOND TYPE=command MSG="action:prompt_button warning|TEST|warning"
-    RESPOND TYPE=command MSG="action:prompt_button error|TEST|error"
-    RESPOND TYPE=command MSG="action:prompt_button_group_end"
+    RESPOND TYPE=command MSG="action:prompt_button load 100|drive MOTOR={params.MOTOR} MOVE=100|warning"
     RESPOND TYPE=command MSG="action:prompt_show"
 
 
