--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -71,34 +71,19 @@ full_steps_per_rotation: 400
 # uart_pin= mmboard:PB6
 # run_current = 0.8
 
-# SAVE_VARIABLE VARIABLE=temperature_target VALUE={TARGET_TEMP}
-
-# variable_selected_filament: 0 # no filament loaded
-[gcode_macro SELECT_FILAMENT]
-description: Selects a filament by setting the appropriate variables, moving the stepper motor, and adjusting pin states.
-gcode:
-    M118 Loading filament {params.FILAMENT}
-    drive MOTOR=motor{params.FILAMENT|int} MOVE=-14
-
 [gcode_macro drive]
 gcode:
     G91 
     FORCE_MOVE STEPPER="extruder_stepper {params.MOTOR}" DISTANCE={params.MOVE} VELOCITY=50
     G90
 
-
-[gcode_macro stepper_pause]
+[gcode_macro stepper_unsync]
 gcode:
-    MANUAL_STEPPER STEPPER={params.MOTOR} ENABLE=0
+    SYNC_EXTRUDER_MOTION EXTRUDER={params.MOTOR} MOTION_QUEUE=""
 
-[gcode_macro stepper_active]
+[gcode_macro stepper_sync]
 gcode:
-    MANUAL_STEPPER STEPPER={params.MOTOR} ENABLE=1
-
-[gcode_macro sync_motor]
-gcode:
-    SYNC_EXTRUDER_MOTION EXTRUDER=motor1 MOTION_QUEUE=extruder
-
+    SYNC_EXTRUDER_MOTION EXTRUDER={params.MOTOR} MOTION_QUEUE=extruder
 
 [gcode_macro Motor1]
 gcode:
@@ -113,23 +98,20 @@ gcode:
 gcode:
     _MotorMenu MOTOR=motor4
 
-
 [gcode_macro _MotorMenu]
 gcode:
     RESPOND TYPE=command MSG="action:prompt_begin {params.MOTOR}"
     RESPOND TYPE=command MSG="action:prompt_text Select what you want {params.MOTOR} to do"
-    
     RESPOND TYPE=command MSG="action:prompt_button_group_start"
     RESPOND TYPE=command MSG="action:prompt_button load Filament|drive MOTOR={params.MOTOR} MOVE=50|secondary"
     RESPOND TYPE=command MSG="action:prompt_button Unload FIlament|drive MOTOR={params.MOTOR} MOVE=-50|secondary"
     RESPOND TYPE=command MSG="action:prompt_button_group_end"
     RESPOND TYPE=command MSG="action:prompt_button_group_start"
-    RESPOND TYPE=command MSG="action:prompt_button disable motor|stepper_pause MOTOR={params.MOTOR}|warning"
-    RESPOND TYPE=command MSG="action:prompt_button enable motor|stepper_active {params.MOTOR}=3|warning"
+    RESPOND TYPE=command MSG="action:prompt_button disable motor|stepper_unsync MOTOR={params.MOTOR}|warning"
+    RESPOND TYPE=command MSG="action:prompt_button enable motor|stepper_sync {params.MOTOR}=3|warning"
     RESPOND TYPE=command MSG="action:prompt_button_group_end"
     RESPOND TYPE=command MSG="action:prompt_footer_button DriveMenu|_DriveMenu MOTOR={params.MOTOR}|info"
     RESPOND TYPE=command MSG="action:prompt_footer_button close|prompt_end|error"
-
     RESPOND TYPE=command MSG="action:prompt_show"
 
 [gcode_macro _DriveMenu]
@@ -148,197 +130,13 @@ gcode:
     RESPOND TYPE=command MSG="action:prompt_button_group_end"
     RESPOND TYPE=command MSG="action:prompt_footer_button  Back|_MotorMenu MOTOR={params.MOTOR}|default"
     RESPOND TYPE=command MSG="action:prompt_show"
+
 [gcode_macro mainMenu]
 gcode:
     RESPOND TYPE=command MSG="action:prompt_begin MainMenu"
     RESPOND TYPE=command MSG="action:prompt_button_group_start"
-    RESPOND TYPE=command MSG="action:prompt_button load 100|drive MOTOR={params.MOTOR} MOVE=100|warning"
+    RESPOND TYPE=command MSG="action:prompt_button Control Motor1|Motor1|warning"
+    RESPOND TYPE=command MSG="action:prompt_button Control Motor2|Motor2|warning"
+    RESPOND TYPE=command MSG="action:prompt_button Control Motor3|Motor3|warning"
+    RESPOND TYPE=command MSG="action:prompt_button Control Motor4|Motor4|warning"
     RESPOND TYPE=command MSG="action:prompt_show"
-
-
-
-#find out why motor 1 and 2 act different to 3 and 4
-
-#test motor 5
-
-# start thinking about how I want the filament sensors to act
-
-# This file contains common pin mappings for the MKS SGEN_L board. To
-# use this config, the firmware should be compiled for the LPC1768.
-
-# See docs/Config_Reference.md for a description of parameters.
-##################################
-# [manual_stepper x1]
-# step_pin: mmboard:P2.2
-# dir_pin: !mmboard:P2.3
-# enable_pin: !mmboard:P2.1
-# microsteps: 16
-# rotation_distance: 40
-# endstop_pin: ^P1.29  # ^P1.28 for X-max
-# position_endstop: 0
-# position_max: 320
-# homing_speed: 50
-
-# [stepper_y]
-# step_pin: P0.19
-# dir_pin: !P0.20
-# enable_pin: !P2.8
-# microsteps: 16
-# rotation_distance: 40
-# endstop_pin: ^P1.27  # ^P1.26 for Y-max
-# position_endstop: 0
-# position_max: 300
-# homing_speed: 50
-
-# [stepper_z]
-# step_pin: P0.22
-# dir_pin: P2.11
-# enable_pin: !P0.21
-# microsteps: 16
-# rotation_distance: 8
-# endstop_pin: ^P1.25  # ^P1.24 for Z-max
-# position_endstop: 0.5
-# position_max: 400
-
-# [extruder]
-# step_pin: P2.13
-# dir_pin: !P0.11
-# enable_pin: !P2.12
-# microsteps: 16
-# rotation_distance: 33.500
-# nozzle_diameter: 0.400
-# filament_diameter: 1.750
-# heater_pin: P2.7
-# sensor_type: EPCOS 100K B57560G104F
-# sensor_pin: P0.23
-# control: pid
-# pid_Kp: 22.2
-# pid_Ki: 1.08
-# pid_Kd: 114
-# min_temp: 0
-# max_temp: 260
-
-# #[extruder1]
-# #step_pin: P0.1
-# #dir_pin: P0.0
-# #enable_pin: !P0.10
-# #heater_pin: P2.6
-# #sensor_pin: P0.25
-# #...
-
-# [heater_bed]
-# heater_pin: P2.5
-# sensor_type: ATC Semitec 104GT-2
-# sensor_pin: P0.24
-# control: watermark
-# min_temp: 0
-# max_temp: 130
-
-
-
-# [mcu]
-# serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
-
-# [printer]
-# kinematics: cartesian
-# max_velocity: 200
-# max_accel: 2000
-# max_z_velocity: 25
-# max_z_accel: 100
-
-
-# ########################################
-# # TMC2208 configuration
-# ########################################
-
-# [tmc2208 manual_stepper x1]
-# uart_pin: mmboard:P1.1
-# run_current: 0.800
-# stealthchop_threshold: 999999
-
-# #[tmc2208 stepper_y]
-# #uart_pin: P1.8
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2208 stepper_z]
-# #uart_pin: P1.10
-# #run_current: 0.650
-# #stealthchop_threshold: 999999
-
-# #[tmc2208 extruder]
-# #uart_pin: P1.15
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2208 extruder1]
-# #uart_pin: P1.17
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-
-# ########################################
-# # TMC2130 configuration
-# ########################################
-
-# #[tmc2130 stepper_x]
-# #cs_pin: P1.1
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.29
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2130 stepper_y]
-# #cs_pin: P1.8
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.27
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2130 stepper_z]
-# #cs_pin: P1.10
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.25
-# #run_current: 0.650
-# #stealthchop_threshold: 999999
-
-# #[tmc2130 extruder]
-# #cs_pin: P1.15
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.28
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2130 extruder1]
-# #cs_pin: P1.17
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.26
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-
-# ########################################
-# # EXP1 / EXP2 (display) pins
-# ########################################
-
-# [board_pins]
-# aliases:
-#     # EXP1 header
-#     EXP1_1=P1.31, EXP1_3=P0.18, EXP1_5=P0.15, EXP1_7=P1.0,  EXP1_9=<GND>,
-#     EXP1_2=P1.30, EXP1_4=P0.16, EXP1_6=P0.17, EXP1_8=P1.22, EXP1_10=<5V>,
-#     # EXP2 header
-#     EXP2_1=P0.8, EXP2_3=P3.25, EXP2_5=P3.26, EXP2_7=P0.27, EXP2_9=<GND>,
-#     EXP2_2=P0.7, EXP2_4=P0.28, EXP2_6=P0.9,  EXP2_8=<RST>, EXP2_10=<NC>
-#     # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp1"
-
-# # See the sample-lcd.cfg file for definitions of common LCD displays.
