--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -5,8 +5,8 @@ serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
 pin: mmboard:PH6
 max_power: 0.4
 off_below: 0.05
-shutdown_speed: 0
-cycle_time:0.015
+shutdown_speed: 0.2
+# cycle_time:0.015
 
 # SET_FAN_SPEED FAN = MMU_fan SPEED= 0.5
 
@@ -139,4 +139,4 @@ gcode:
     RESPOND TYPE=command MSG="action:prompt_button Control Motor2|Motor2|warning"
     RESPOND TYPE=command MSG="action:prompt_button Control Motor3|Motor3|warning"
     RESPOND TYPE=command MSG="action:prompt_button Control Motor4|Motor4|warning"
-    RESPOND TYPE=command MSG="action:prompt_show"
+    RESPOND TYPE=command MSG="action:prompt_show" 
