all manual steppers

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -9,13 +9,24 @@ shutdown_speed: 0
 cycle_time:0.015
 
 # SET_FAN_SPEED FAN = MMU_fan SPEED= 0.5
+# [duplicate_pin_override]
+# mmboard:PF0, !mmboard:PF1, !mmboard:PD7
 
 [respond]
 default_type: command
 
-# MKS Gen L V1
-[extruder_stepper motor1]
-extruder: 
+# # MKS Gen L V1
+# [extruder_stepper extruder1]
+# extruder: 
+# step_pin: mmboard:PF0
+# dir_pin: !mmboard:PF1
+# enable_pin: !mmboard:PD7
+# microsteps: 16
+# rotation_distance: 40
+# full_steps_per_rotation: 400
+
+
+[manual_stepper motor1]
 step_pin: mmboard:PF0
 dir_pin: !mmboard:PF1
 enable_pin: !mmboard:PD7
@@ -25,7 +36,6 @@ full_steps_per_rotation: 400
 # [tmc2208 extruder_stepper motor1]
 # uart_pin= mmboard:PK1
 # run_current = 0.8
-
 
 [manual_stepper motor2]
 step_pin: mmboard:PF6
@@ -78,6 +88,7 @@ filename:MMU-variables.
 # SAVE_VARIABLE VARIABLE=temperature_target VALUE={TARGET_TEMP}
 
 # variable_selected_filament: 0 # no filament loaded
+
 [gcode_macro SELECT_FILAMENT]
 description: Selects a filament by setting the appropriate variables, moving the stepper motor, and adjusting pin states.
 gcode:
@@ -89,12 +100,15 @@ gcode:
     G91 
     MANUAL_STEPPER STEPPER={params.MOTOR} MOVE={params.MOVE} SYNC={params.ASYCN|default(1)}
     G90
+
 [gcode_macro stepper_pause]
 gcode:
     MANUAL_STEPPER STEPPER={params.MOTOR} ENABLE=0
+
 [gcode_macro stepper_active]
 gcode:
     MANUAL_STEPPER STEPPER={params.MOTOR} ENABLE=1
+
 [gcode_macro sync_motor]
 gcode:
     SYNC_EXTRUDER_MOTION EXTRUDER=motor1 MOTION_QUEUE=extruder
@@ -108,6 +122,10 @@ gcode:
 [gcode_macro Motor3]
 gcode:
     _MotorMenu MOTOR=motor3
+
+[gcode_macro Motor4]
+gcode:
+    _MotorMenu MOTOR=motor4    
 
 [gcode_macro _MotorMenu]
 gcode:
