--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -5,6 +5,7 @@ serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
 pin: mmboard:PH6
 max_power: 0.4
 off_below: 0.05
+idle_speed: 0.25
 shutdown_speed: 0.2
 # cycle_time:0.015
 
