updates to variables and starting to plan unload and load flow

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -1,11 +1,13 @@
 [mcu mmboard]
 serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
+[save_variables]
+filename: /MMU-variables.cfg
 
 [fan_generic MMU_fan]
 pin: mmboard:PH6
 max_power: 0.4
 off_below: 0.05
-idle_speed: 0.25
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          idle_speed: 0.25
 shutdown_speed: 0.2
 # cycle_time:0.015
 
@@ -71,6 +73,36 @@ full_steps_per_rotation: 400
 # [tmc2208 manual_stepper motor5]
 # uart_pin= mmboard:PB6
 # run_current = 0.8
+
+
+{% set current-filament = printer.save_variables.variables.last_filament %}
+
+[gcode_macro load_Extruder]
+gcode:
+
+[gcode_macro M600]
+description: Filament Change
+gcode:
+    M83 ; Set extruder to relative mode
+    M104 S200 ; Set hotend temperature to 200°C (adjust according to filament type)
+    M109 S200 ; Wait for hotend to reach temperature
+    G92 E0 ; Reset extruder position
+    G1 E-100 F3000 ; Retract 100mm of filament at 3000mm/min
+    {% set runout = False %}
+    {% while not runout %}
+        G1 E-10 F3000 ; Retract another 10mm
+        G4 P500 ; Wait for 500ms
+        {% set runout = printer['filament_switch_sensor MM'].is_triggered %}
+    {% endwhile %}
+    M104 S0 ; Turn off hotend
+    M117 Filament Change Completed ; Display message on the screen
+    M84 E ; Disable extruder motor
+    PAUSE ; Pause the print
+
+# [gcode_macro RESUME]
+# description: Resume Print after Filament Change
+# gcode:
+#     RESUME_PRINT
 
 [gcode_macro drive]
 gcode:
