--- a/printer.cfg
+++ b/printer.cfg
@@ -19,6 +19,7 @@
 [include ./KAMP/Smart_Park.cfg]
 [include ./KAMP/Line_Purge.cfg]
 [include DIY MMU MKS Gen L v1.0/MMU-Config.cfg]
+
 #[include klipper_debug.cfg]
 # [include adxl.cfg]             ; Comment this out when you disconnect the Pico/MellowFly
 # [include adxlmcu.cfg]
@@ -200,6 +201,10 @@ runout_gcode:
     UNLOAD_FILAMENT
 event_delay: 3.0
 pause_delay: 1.0
+switch_pin: PA12
+
+[filament_switch_sensor mmu_sensor]
+pause_on_runout: false
 switch_pin: PA12
 
 [delayed_gcode DISABLE_FILAMENT_SENSOR]
