--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -46,7 +46,7 @@ step_pin: mmboard:PL3
 dir_pin: !mmboard:PL1
 enable_pin: !mmboard:PK0
 microsteps: 16
-rotation_distance: 40
+rotation_distance: 40`
 full_steps_per_rotation: 400
 # [tmc2208 manual_stepper motor3]
 # uart_pin= mmboard:PK3
