--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -1,12 +1,15 @@
 [mcu mmboard]
 serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
+[save_variables]
+filename: /MMU-variables.cfg
 
 [fan_generic MMU_fan]
 pin: mmboard:PH6
 max_power: 0.4
 off_below: 0.05
-shutdown_speed: 0
-cycle_time:0.015
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          idle_speed: 0.25
+shutdown_speed: 0.2
+# cycle_time:0.015
 
 # SET_FAN_SPEED FAN = MMU_fan SPEED= 0.5
 
@@ -27,7 +30,7 @@ full_steps_per_rotation: 400
 # run_current = 0.8
 
 
-[manual_stepper motor2]
+[extruder_stepper motor2]
 step_pin: mmboard:PF6
 dir_pin: !mmboard:PF7
 enable_pin: !mmboard:PF2
@@ -38,18 +41,18 @@ full_steps_per_rotation: 400
 # uart_pin= mmboard:PK2
 # run_current = 0.8
 
-[manual_stepper motor3]
+[extruder_stepper motor3]
 step_pin: mmboard:PL3
 dir_pin: !mmboard:PL1
 enable_pin: !mmboard:PK0
 microsteps: 16
-rotation_distance: 40
+rotation_distance: 40`
 full_steps_per_rotation: 400
 # [tmc2208 manual_stepper motor3]
 # uart_pin= mmboard:PK3
 # run_current = 0.8
 
-[manual_stepper motor4] #is currently working
+[extruder_stepper motor4] #is currently working
 step_pin: mmboard:PA4
 dir_pin: !mmboard:PA6
 enable_pin: !mmboard:PA2
@@ -60,7 +63,7 @@ full_steps_per_rotation: 400
 # uart_pin= mmboard:PK4
 # run_current = 0.8
 
-[manual_stepper motor5] # Initial setup for testing motor 5
+[extruder_stepper motor5] # Initial setup for testing motor 5
 step_pin: mmboard:PC1
 dir_pin: !mmboard:PC3
 enable_pin: !mmboard:PC7
@@ -72,32 +75,48 @@ full_steps_per_rotation: 400
 # run_current = 0.8
 
 
-[save_variables]
-filename:MMU-variables.
+{% set current-filament = printer.save_variables.variables.last_filament %}
 
-# SAVE_VARIABLE VARIABLE=temperature_target VALUE={TARGET_TEMP}
-
-# variable_selected_filament: 0 # no filament loaded
-[gcode_macro SELECT_FILAMENT]
-description: Selects a filament by setting the appropriate variables, moving the stepper motor, and adjusting pin states.
+[gcode_macro load_Extruder]
 gcode:
-    M118 Loading filament {params.FILAMENT}
-    drive MOTOR=motor{params.FILAMENT|int} MOVE=-14
+
+[gcode_macro M600]
+description: Filament Change
+gcode:
+    M83 ; Set extruder to relative mode
+    M104 S200 ; Set hotend temperature to 200°C (adjust according to filament type)
+    M109 S200 ; Wait for hotend to reach temperature
+    G92 E0 ; Reset extruder position
+    G1 E-100 F3000 ; Retract 100mm of filament at 3000mm/min
+    {% set runout = False %}
+    {% while not runout %}
+        G1 E-10 F3000 ; Retract another 10mm
+        G4 P500 ; Wait for 500ms
+        {% set runout = printer['filament_switch_sensor MM'].is_triggered %}
+    {% endwhile %}
+    M104 S0 ; Turn off hotend
+    M117 Filament Change Completed ; Display message on the screen
+    M84 E ; Disable extruder motor
+    PAUSE ; Pause the print
+
+# [gcode_macro RESUME]
+# description: Resume Print after Filament Change
+# gcode:
+#     RESUME_PRINT
 
 [gcode_macro drive]
 gcode:
     G91 
-    MANUAL_STEPPER STEPPER={params.MOTOR} MOVE={params.MOVE} SYNC={params.ASYCN|default(1)}
+    FORCE_MOVE STEPPER="extruder_stepper {params.MOTOR}" DISTANCE={params.MOVE} VELOCITY=50
     G90
-[gcode_macro stepper_pause]
+
+[gcode_macro stepper_unsync]
 gcode:
-    MANUAL_STEPPER STEPPER={params.MOTOR} ENABLE=0
-[gcode_macro stepper_active]
+    SYNC_EXTRUDER_MOTION EXTRUDER={params.MOTOR} MOTION_QUEUE=""
+
+[gcode_macro stepper_sync]
 gcode:
-    MANUAL_STEPPER STEPPER={params.MOTOR} ENABLE=1
-[gcode_macro sync_motor]
-gcode:
-    SYNC_EXTRUDER_MOTION EXTRUDER=motor1 MOTION_QUEUE=extruder
+    SYNC_EXTRUDER_MOTION EXTRUDER={params.MOTOR} MOTION_QUEUE=extruder
 
 [gcode_macro Motor1]
 gcode:
@@ -108,28 +127,29 @@ gcode:
 [gcode_macro Motor3]
 gcode:
     _MotorMenu MOTOR=motor3
+[gcode_macro Motor4]
+gcode:
+    _MotorMenu MOTOR=motor4
 
 [gcode_macro _MotorMenu]
 gcode:
     RESPOND TYPE=command MSG="action:prompt_begin {params.MOTOR}"
     RESPOND TYPE=command MSG="action:prompt_text Select what you want {params.MOTOR} to do"
-    
     RESPOND TYPE=command MSG="action:prompt_button_group_start"
     RESPOND TYPE=command MSG="action:prompt_button load Filament|drive MOTOR={params.MOTOR} MOVE=50|secondary"
     RESPOND TYPE=command MSG="action:prompt_button Unload FIlament|drive MOTOR={params.MOTOR} MOVE=-50|secondary"
     RESPOND TYPE=command MSG="action:prompt_button_group_end"
     RESPOND TYPE=command MSG="action:prompt_button_group_start"
-    RESPOND TYPE=command MSG="action:prompt_button disable motor|stepper_pause MOTOR={params.MOTOR}|warning"
-    RESPOND TYPE=command MSG="action:prompt_button enable motor|stepper_active {params.MOTOR}=3|warning"
+    RESPOND TYPE=command MSG="action:prompt_button disable motor|stepper_unsync MOTOR={params.MOTOR}|warning"
+    RESPOND TYPE=command MSG="action:prompt_button enable motor|stepper_sync {params.MOTOR}=3|warning"
     RESPOND TYPE=command MSG="action:prompt_button_group_end"
     RESPOND TYPE=command MSG="action:prompt_footer_button DriveMenu|_DriveMenu MOTOR={params.MOTOR}|info"
     RESPOND TYPE=command MSG="action:prompt_footer_button close|prompt_end|error"
-
     RESPOND TYPE=command MSG="action:prompt_show"
 
 [gcode_macro _DriveMenu]
 gcode:
-    RESPOND TYPE=command MSG="action:prompt_begin MacroPrompt"
+    RESPOND TYPE=command MSG="action:prompt_begin Motor Control"
     RESPOND TYPE=command MSG="action:prompt_text Select what you want {params.MOTOR} to do"
     RESPOND TYPE=command MSG="action:prompt_button_group_start"
     RESPOND TYPE=command MSG="action:prompt_button load 100|drive MOTOR={params.MOTOR} MOVE=100|warning"
@@ -143,206 +163,13 @@ gcode:
     RESPOND TYPE=command MSG="action:prompt_button_group_end"
     RESPOND TYPE=command MSG="action:prompt_footer_button  Back|_MotorMenu MOTOR={params.MOTOR}|default"
     RESPOND TYPE=command MSG="action:prompt_show"
-[gcode_macro SHOW_PROMT_BUTTON_GROUPS]
+
+[gcode_macro mainMenu]
 gcode:
-    RESPOND TYPE=command MSG="action:prompt_begin MacroPrompt"
-    RESPOND TYPE=command MSG="action:prompt_text These are all button colors"
-    RESPOND TYPE=command MSG="action:"
+    RESPOND TYPE=command MSG="action:prompt_begin MainMenu"
     RESPOND TYPE=command MSG="action:prompt_button_group_start"
-    RESPOND TYPE=command MSG="action:prompt_button primary|TEST|primary"
-    RESPOND TYPE=command MSG="action:prompt_button secondary|TEST|secondary"
-    RESPOND TYPE=command MSG="action:prompt_button_group_end"
-    RESPOND TYPE=command MSG="action:prompt_button_group_start"
-    RESPOND TYPE=command MSG="action:prompt_button info|TEST|info"
-    RESPOND TYPE=command MSG="action:prompt_button warning|TEST|warning"
-    RESPOND TYPE=command MSG="action:prompt_button error|TEST|error"
-    RESPOND TYPE=command MSG="action:prompt_button_group_end"
-    RESPOND TYPE=command MSG="action:prompt_show"
-
-
-
-#find out why motor 1 and 2 act different to 3 and 4
-
-#test motor 5
-
-# start thinking about how I want the filament sensors to act
-
-# This file contains common pin mappings for the MKS SGEN_L board. To
-# use this config, the firmware should be compiled for the LPC1768.
-
-# See docs/Config_Reference.md for a description of parameters.
-##################################
-# [manual_stepper x1]
-# step_pin: mmboard:P2.2
-# dir_pin: !mmboard:P2.3
-# enable_pin: !mmboard:P2.1
-# microsteps: 16
-# rotation_distance: 40
-# endstop_pin: ^P1.29  # ^P1.28 for X-max
-# position_endstop: 0
-# position_max: 320
-# homing_speed: 50
-
-# [stepper_y]
-# step_pin: P0.19
-# dir_pin: !P0.20
-# enable_pin: !P2.8
-# microsteps: 16
-# rotation_distance: 40
-# endstop_pin: ^P1.27  # ^P1.26 for Y-max
-# position_endstop: 0
-# position_max: 300
-# homing_speed: 50
-
-# [stepper_z]
-# step_pin: P0.22
-# dir_pin: P2.11
-# enable_pin: !P0.21
-# microsteps: 16
-# rotation_distance: 8
-# endstop_pin: ^P1.25  # ^P1.24 for Z-max
-# position_endstop: 0.5
-# position_max: 400
-
-# [extruder]
-# step_pin: P2.13
-# dir_pin: !P0.11
-# enable_pin: !P2.12
-# microsteps: 16
-# rotation_distance: 33.500
-# nozzle_diameter: 0.400
-# filament_diameter: 1.750
-# heater_pin: P2.7
-# sensor_type: EPCOS 100K B57560G104F
-# sensor_pin: P0.23
-# control: pid
-# pid_Kp: 22.2
-# pid_Ki: 1.08
-# pid_Kd: 114
-# min_temp: 0
-# max_temp: 260
-
-# #[extruder1]
-# #step_pin: P0.1
-# #dir_pin: P0.0
-# #enable_pin: !P0.10
-# #heater_pin: P2.6
-# #sensor_pin: P0.25
-# #...
-
-# [heater_bed]
-# heater_pin: P2.5
-# sensor_type: ATC Semitec 104GT-2
-# sensor_pin: P0.24
-# control: watermark
-# min_temp: 0
-# max_temp: 130
-
-
-
-# [mcu]
-# serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
-
-# [printer]
-# kinematics: cartesian
-# max_velocity: 200
-# max_accel: 2000
-# max_z_velocity: 25
-# max_z_accel: 100
-
-
-# ########################################
-# # TMC2208 configuration
-# ########################################
-
-# [tmc2208 manual_stepper x1]
-# uart_pin: mmboard:P1.1
-# run_current: 0.800
-# stealthchop_threshold: 999999
-
-# #[tmc2208 stepper_y]
-# #uart_pin: P1.8
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2208 stepper_z]
-# #uart_pin: P1.10
-# #run_current: 0.650
-# #stealthchop_threshold: 999999
-
-# #[tmc2208 extruder]
-# #uart_pin: P1.15
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2208 extruder1]
-# #uart_pin: P1.17
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-
-# ########################################
-# # TMC2130 configuration
-# ########################################
-
-# #[tmc2130 stepper_x]
-# #cs_pin: P1.1
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.29
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2130 stepper_y]
-# #cs_pin: P1.8
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.27
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2130 stepper_z]
-# #cs_pin: P1.10
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.25
-# #run_current: 0.650
-# #stealthchop_threshold: 999999
-
-# #[tmc2130 extruder]
-# #cs_pin: P1.15
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.28
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-# #[tmc2130 extruder1]
-# #cs_pin: P1.17
-# #spi_software_miso_pin: P0.5
-# #spi_software_mosi_pin: P4.28
-# #spi_software_sclk_pin: P0.4
-# ##diag1_pin: ^!P1.26
-# #run_current: 0.800
-# #stealthchop_threshold: 999999
-
-
-# ########################################
-# # EXP1 / EXP2 (display) pins
-# ########################################
-
-# [board_pins]
-# aliases:
-#     # EXP1 header
-#     EXP1_1=P1.31, EXP1_3=P0.18, EXP1_5=P0.15, EXP1_7=P1.0,  EXP1_9=<GND>,
-#     EXP1_2=P1.30, EXP1_4=P0.16, EXP1_6=P0.17, EXP1_8=P1.22, EXP1_10=<5V>,
-#     # EXP2 header
-#     EXP2_1=P0.8, EXP2_3=P3.25, EXP2_5=P3.26, EXP2_7=P0.27, EXP2_9=<GND>,
-#     EXP2_2=P0.7, EXP2_4=P0.28, EXP2_6=P0.9,  EXP2_8=<RST>, EXP2_10=<NC>
-#     # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp1"
-
-# # See the sample-lcd.cfg file for definitions of common LCD displays.
+    RESPOND TYPE=command MSG="action:prompt_button Control Motor1|Motor1|warning"
+    RESPOND TYPE=command MSG="action:prompt_button Control Motor2|Motor2|warning"
+    RESPOND TYPE=command MSG="action:prompt_button Control Motor3|Motor3|warning"
+    RESPOND TYPE=command MSG="action:prompt_button Control Motor4|Motor4|warning"
+    RESPOND TYPE=command MSG="action:prompt_show" 
