adding way to update both belays at the same time

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -117,6 +117,12 @@ multiplier_high: 1
 multiplier_low: 0.9
 debug_level: 1
 
+[gcode_macro BELAY_all_MULTIPLIER]
+description: use this to adjust both the under_extruding_belay and the over_extruding_belay at the same time
+gcoded:
+    BELAY_SET_MULTIPLIER BELAY=under_extruding_belay HIGH={params.HIGH} LOW=1
+    BELAY_SET_MULTIPLIER BELAY=over_extruding_belay HIGH=1 LOW={params.LOW}
+
 [gcode_macro M600]
 description: Filament Change
 variable_runout: False
