changes to macros for belay espeshaly the sync

--- a/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
+++ b/DIY MMU MKS Gen L v1.0/MMU-Config.cfg
@@ -117,11 +117,31 @@ multiplier_high: 1
 multiplier_low: 0.9
 debug_level: 1
 
-[gcode_macro BELAY_all_MULTIPLIER]
-description: use this to adjust both the under_extruding_belay and the over_extruding_belay at the same time
-gcoded:
-    BELAY_SET_MULTIPLIER BELAY=under_extruding_belay HIGH={params.HIGH} LOW=1
-    BELAY_SET_MULTIPLIER BELAY=over_extruding_belay HIGH=1 LOW={params.LOW}
+[gcode_macro BELAY_ALL_MULTIPLIER]
+description: Adjust both the under_extruding_belay and the over_extruding_belay at the same time
+gcode:
+    {% set active = printer.save_variables.variables.active_extruder %}
+    {% set under_belay = params.HIGH | default(1.1) %}
+    {% set over_belay = params.LOW | default(0.9) %}
+    
+    SAVE_VARIABLE VARIABLE="under_belay{active}" VALUE="{active}{ under_belay }"
+    SAVE_VARIABLE VARIABLE="over_belay{active}" VALUE="{active}{ over_belay }"
+    
+    BELAY_SET_MULTIPLIER BELAY=under_extruding_belay HIGH={ under_belay } LOW=1
+    BELAY_SET_MULTIPLIER BELAY=over_extruding_belay HIGH=1 LOW={ over_belay }
+
+[gcode_macro SYNC_BELAY]
+description: Sync BELAY settings for the active extruder
+gcode:
+    {% set active = printer.save_variables.variables.active_extruder %}
+    
+    {% set under_belay = printer.save_variables.variables["under_belay" ~ active] | default(1.1) %}
+    {% set over_belay = printer.save_variables.variables["over_belay" ~ active] | default(0.9) %}
+    
+    BELAY_SET_MULTIPLIER BELAY=under_extruding_belay HIGH={{ under_belay }} LOW=1
+    BELAY_SET_MULTIPLIER BELAY=over_extruding_belay HIGH=1 LOW={{ over_belay }}
+    
+    RESPOND MSG="Synced BELAY for extruder {{ active }}: under_belay={{ under_belay }}, over_belay={{ over_belay }}"
 
 [gcode_macro M600]
 description: Filament Change
@@ -143,7 +163,7 @@ gcode:
     
     {% if runout %}
         M104 S0 ; Turn off hotend
-        M117 Filament Change Completed ; Display message on the screen
+        M118 Filament Change Completed ; Display message on the screen
         M84 E ; Disable extruder motor
         PAUSE ; Pause the print
     {% endif %}
@@ -152,9 +172,10 @@ gcode:
 description: BOOT_UP
 gcode:
     {% set active=printer.save_variables.variables.active_extruder %}
-    M117 MMU booting
+    M118 MMU booting
     stepper_sync MOTOR="motor{active}"# Printer start-up sequence
-    M117 MMU Online, loaded filament {active}
+    M118 MMU Online
+    M118Current Filament:{active}
 
 [gcode_macro _MMU_startup]
 # initial_duration: 10
